--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL='mongodb+srv://diegoMongo:08052021Bea@cluster0.yzp4w.mongodb.net/make-list?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_URL='mongodb+srv://diegoMongo:08052021Bea@cluster0.yzp4w.mongodb.net/tabelona?retryWrites=true&w=majority&appName=Cluster0'
 API_KEY='1461377'
