fix: add cron http

--- a/.github/workflows/fetch-teams.yaml
+++ b/.github/workflows/fetch-teams.yaml
@@ -3,11 +3,11 @@ name: Fetch All Teams
 # Executa a cada dia às 19:54
 on:
   schedule:
-    - cron: '12 20 * * *'
+    - cron: '16 20 * * *'
 
 jobs:
   fetch-teams:
     runs-on: ubuntu-latest
     steps:
       - name: Call API to fetch all teams
-        run: curl -X POST https://tabelona-api.vercel.app/teams/cron
+        run: curl -X POST https://your-api-domain.com/api/fetchAllTeams
